@@ -35,7 +35,7 @@ doc.stored=stored:true:true:false:false
 doc.tokenized=true
 doc.term.vector=vector:true:true:false:false
 log.step=500
-delete.log.step=100
+log.step.DeleteDoc=100
 
 docs.dir=reuters-out
 #docs.dir=reuters-111
